# Legacy-iOS-Revival-kit

./: README.md  fix_imessage.py  install-dependencies.sh  pyproject.toml  revival.sh  revive.sh  run-fix-imessage.sh
Resources/legacy_ios_revival/: __init__.py  cli.py  imessage.py
legacy_ios_revival/: cli.py
